# DentalAssessment

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  requirements.txt
backend/: Dockerfile  main.py  pyproject.toml  requirements-quantum.txt  requirements.txt
backend/api/routers/: assessments.py  health.py  models.py
backend/api/schemas/: schemas.py
backend/core/: config.py  database.py  models.py
backend/services/: cache_service.py  image_service.py  logging_service.py  model_orchestrator.py
backend/tests/: test_api.py  test_health.py
docker/: init-db.sql
