[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dental-assessment"
version = "1.0.0"
description = "Hybrid Quantum-Classical Kernel Method for Early Detection of Periapical Lesions in Panoramic Radiographs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DentalAssessment Team", email = "team@dentalassessment.com"},
]
keywords = ["dental", "medical-imaging", "machine-learning", "quantum-computing", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "python-multipart>=0.0.6",
    "pillow>=10.1.0",
    "opencv-python>=4.8.1.78",
    "numpy>=1.24.4",
    "scikit-learn>=1.3.2",
    "torch>=2.1.1",
    "torchvision>=0.16.1",
    "pennylane>=0.33.0",
    "pennylane-qiskit>=0.33.0",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "scikit-image>=0.22.0",
    "scipy>=1.11.4",
    "pandas>=2.1.4",
    "tqdm>=4.66.1",
    "joblib>=1.3.2",
    "httpx>=0.25.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "minio>=7.2.0",
    "aiofiles>=23.2.1",
    "structlog>=23.2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
quantum = [
    "qiskit>=0.45.0",
    "qiskit-aer>=0.13.0",
    "qiskit-algorithms>=0.2.0",
    "qiskit-ibmq-provider>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/fikriirawan1979/DentalAssessment"
Documentation = "https://github.com/fikriirawan1979/DentalAssessment/docs"
Repository = "https://github.com/fikriirawan1979/DentalAssessment"
"Bug Tracker" = "https://github.com/fikriirawan1979/DentalAssessment/issues"

[project.scripts]
dental-assessment = "backend.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["backend"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["backend/tests", "frontend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]